# simplesat

./: CMakeLists.txt  README.md  devlog  main.cc  test.cc
.github/workflows/: cmake-multi-platform.yml
include/: clause.h  literal.h  solver.h
src/: clause.cc  literal.cc  solver.cc
test/: 02-clause-length.cnf  03-pos-neg.cnf  04-existential.cnf  05-lit-freq.cnf  06-clc-1.cnf  07-clc-ladder-1.cnf  08-unit-clauses.cnf  09-clc-2.cnf  10-cvc.cnf  11-trivial.cnf  12-false-trivial.cnf  13-nontrivial.cnf  14-horn-clauses.cnf  check.py  run.sh
